--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Joey Hong
                 </p>
-                <p>I am a PhD Student advised by Professor <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a> and <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>, where I work on offline reinforcement learning. 
+                <p>I am a PhD Student advised by Professor <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a> and Professor <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>, where I work on offline reinforcement learning. 
                 </p>
                 <p>
                   Prior to joining my PhD program, I was an AI Resident at <a href="https://research.google/">Google Research</a>, where I worked on multi-task bandits as well as program synthesis.
@@ -51,6 +51,32 @@
               </td>
             </tr>
           </tbody></table>
+           <table
+            style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+            <tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/overcooked_influence.png" width=200></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2303.02265">
+                    <papertitle>Learning to Influence Human Behavior with Offline Reinforcement Learning</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <br>
+                  <a href="https://arxiv.org/abs/2303.02265">arXiv</a>, <a
+                    href="https://sites.google.com/berkeley.edu/learningtoinfluencehumans">website</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:0px">
