--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/profile.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.png" class="hoverZoomLink"></a>
+                <a href="images/profile.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/profile.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
@@ -54,7 +54,26 @@
            <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tbody>
-              <tr>
+              <tr onmouseout="influence_stop()" onmouseover="influence_start()">
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two" id='influence_image'><video  width=100% height=100% muted autoplay loop>
+                    <source src="images/overcooked_influence_example1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                    </video></div>
+                    <img src='images/overcooked_influence.png' width="160">
+                  </div>
+                  <script type="text/javascript">
+                    function bakedsdf_start() {
+                      document.getElementById('influence_image').style.opacity = "1";
+                    }
+        
+                    function bakedsdf_stop() {
+                      document.getElementById('influence_image').style.opacity = "0";
+                    }
+                    bakedsdf_stop()
+                  </script>
+                </td>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two">
