--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                     <img src='images/overcooked_influence.png' width="160">
                   </div>
                   <script type="text/javascript">
-                    function bakedsdf_start() {
+                    function influence_start() {
                       document.getElementById('influence_image').style.opacity = "1";
                     }
         
-                    function bakedsdf_stop() {
+                    function influence_stop() {
                       document.getElementById('influence_image').style.opacity = "0";
                     }
-                    bakedsdf_stop()
+                    influence_stop()
                   </script>
                 </td>
                 <td style="padding:20px;width:25%;vertical-align:middle">
