--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>Joey hong</title>
+    <title>Joey Hong</title>
 
     <meta name="author" content="Joey Hong">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -73,13 +73,6 @@
                     }
                     influence_stop()
                   </script>
-                </td>
-                <td style="padding:20px;width:25%;vertical-align:middle">
-                  <div class="one">
-                    <div class="two">
-                      <img src="images/overcooked_influence.png" width=200></img>
-                    </div>
-                  </div>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2303.02265">
