--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <source src="images/overcooked_influence_example1.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                     </video></div>
-                    <img src='images/overcooked_influence.png' width="160">
+                    <img src='images/overcooked_influence.png' width="200">
                   </div>
                   <script type="text/javascript">
                     function influence_start() {
@@ -80,11 +80,55 @@
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
-                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
                   <br>
                   <a href="https://arxiv.org/abs/2303.02265">arXiv</a>, <a
                     href="https://sites.google.com/berkeley.edu/learningtoinfluencehumans">website</a>
+                </td>
+              </tr>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/ccvl.png" width=200></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2212.04607">
+                    <papertitle>Confidence-Conditioned Value Functions for Offline Reinforcement Learning</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="https://aviralkumar2907.github.io/">Aviral Kumar</a>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <br>
+                  <em>ICLR</em>, 2022 (oral)
+                  <br>
+                  <a href="https://arxiv.org/abs/2212.04607">arXiv</a>
+                </td>
+              </tr>
+             <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/misspecification.png" width=200></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2212.04717">
+                    <papertitle>On the Sensitivity of Reward Inference to Misspecified Human Models</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="https://scholar.google.com/citations?user=X-Sd3-8AAAAJ&hl=en">Kush Bhatia</a>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <br>
+                  <em>ICLR</em>, 2022 (oral)
+                  <br>
+                  <a href="https://arxiv.org/abs/2212.04717">arXiv</a>
                 </td>
               </tr>
             </tbody>
