--- a/index.html
+++ b/index.html
@@ -49,11 +49,52 @@
                   I'm interested in pushing the capabilities of offline reinforcement learning, specifically in applications that involve interacting with humans, through a mixture of theory and applied work.
                 </p>
               </td>
-            </tr>
+              </tr>              
           </tbody></table>
            <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
-            <tbody>
+             <tbody>
+             <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/zero_shot_dialogue.png" width=160></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2204.05618">
+                    <papertitle>Offline RL with Observation Histories: Analyzing and Improving Sample Complexity</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <br>
+                  <a href="https://arxiv.org/abs/2311.05584">arXiv</a>,
+                </td>
+              </tr>
+             <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/history.png" width=160></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2204.05618">
+                    <papertitle>Zero-Shot Goal-Directed Dialogue via RL on Imagined Conversations</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <br>
+                  <a href="https://arxiv.org/abs/2310.20663">arXiv</a>,
+                </td>
+              </tr>
+
               <tr onmouseout="influence_stop()" onmouseover="influence_start()">
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
@@ -82,6 +123,8 @@
                   <strong>Joey Hong</strong>,
                   <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
                   <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <br>
+                  <em>NeurIPS</em>, 2023
                   <br>
                   <a href="https://arxiv.org/abs/2303.02265">arXiv</a>, <a
                     href="https://sites.google.com/berkeley.edu/learningtoinfluencehumans">website</a>
