--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-                <h2>Research</h2>
+                <h2>Current Research</h2>
                 <p>
-                  I'm interested in pushing the capabilities of offline reinforcement learning, specifically in applications that involve interacting with humans, through a mixture of theory and applied work.
+                  I'm currently interested in pushing the capabilities of offline reinforcement learning, specifically in applications that involve interacting with humans, through a mixture of theory and applied work.
                 </p>
               </td>
               </tr>              
@@ -63,15 +63,16 @@
                   </div>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://arxiv.org/abs/2204.05618">
-                    <papertitle>Offline RL with Observation Histories: Analyzing and Improving Sample Complexity</papertitle>
+                  <a href="https://arxiv.org/abs/2311.05584">
+                    <papertitle>Zero-Shot Goal-Directed Dialogue via RL on Imagined Conversations</papertitle>
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
                   <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
                   <br>
                   <a href="https://arxiv.org/abs/2311.05584">arXiv</a>,
+                  <a href="https://docs.google.com/presentation/d/11RF5R9qBYtNaNsbo2_5kucaHC7FNggGZnrYlqJ7ynm4/edit?usp=sharing">slides</a>
                 </td>
               </tr>
              <tr>
@@ -83,15 +84,15 @@
                   </div>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
-                  <a href="https://arxiv.org/abs/2204.05618">
-                    <papertitle>Zero-Shot Goal-Directed Dialogue via RL on Imagined Conversations</papertitle>
+                  <a href="https://arxiv.org/abs/2310.20663">
+                    <papertitle>Offline RL with Observation Histories: Analyzing and Improving Sample Complexity</papertitle>
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
                   <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
                   <br>
-                  <a href="https://arxiv.org/abs/2310.20663">arXiv</a>,
+                  <a href="https://arxiv.org/abs/2310.20663">arXiv</a>
                 </td>
               </tr>
 
