--- a/index.html
+++ b/index.html
@@ -58,6 +58,28 @@
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two">
+                      <img src="images/qsft.png" width=160></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2411.05193">
+                    <papertitle>Q-SFT: Q-Learning for Language Models via Supervised Fine-Tuning</papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <br>
+                  <em>ICLR</em>, 2025
+                  <br>
+                  <a href="https://arxiv.org/abs/2411.05193">arXiv</a>,
+                </td>
+              </tr>
+             <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
                       <img src="images/zero_shot_dialogue.png" width=160></img>
                     </div>
                   </div>
@@ -70,6 +92,8 @@
                   <strong>Joey Hong</strong>,
                   <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
                   <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <br>
+                  <em>NeurIPS Foundation Models for Decision Making Workshop</em>, 2024
                   <br>
                   <a href="https://arxiv.org/abs/2311.05584">arXiv</a>,
                   <a href="https://docs.google.com/presentation/d/11RF5R9qBYtNaNsbo2_5kucaHC7FNggGZnrYlqJ7ynm4/edit?usp=sharing">slides</a>
@@ -91,6 +115,8 @@
                   <strong>Joey Hong</strong>,
                   <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
                   <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
+                  <br>
+                  <em>ICLR</em>, 2024
                   <br>
                   <a href="https://arxiv.org/abs/2310.20663">arXiv</a>
                 </td>
