--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                   <br>
                   <em>ICLR</em>, 2025
                   <br>
-                  <a href="https://arxiv.org/abs/2411.05193">arXiv</a>,
+                  <a href="https://arxiv.org/abs/2411.05193">arXiv</a>
                 </td>
               </tr>
              <tr>
