--- a/index.html
+++ b/index.html
@@ -122,25 +122,13 @@
                 </td>
               </tr>
 
-              <tr onmouseout="influence_stop()" onmouseover="influence_start()">
+              <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
-                    <div class="two" id='influence_image'><video  width=100% height=100% muted autoplay loop>
-                    <source src="images/overcooked_influence_example1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                    </video></div>
-                    <img src='images/overcooked_influence.png' width="160">
+                    <div class="two">
+                      <img src="images/overcooked_influence.png" width=160></img>
+                    </div>
                   </div>
-                  <script type="text/javascript">
-                    function influence_start() {
-                      document.getElementById('influence_image').style.opacity = "1";
-                    }
-        
-                    function influence_stop() {
-                      document.getElementById('influence_image').style.opacity = "0";
-                    }
-                    influence_stop()
-                  </script>
                 </td>
                 <td style="padding:20px;width:75%;vertical-align:middle">
                   <a href="https://arxiv.org/abs/2303.02265">
