--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Current Research</h2>
                 <p>
-                  I'm currently interested in pushing the capabilities of offline reinforcement learning, specifically in applications that involve interacting with humans, through a mixture of theory and applied work.
+                  I'm currently interested developing novel reinforcement learning algorithms that scale better to difficult problems, particularly involving large language models and interaction with humans. 
                 </p>
               </td>
               </tr>              
@@ -54,6 +54,60 @@
            <table
             style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
              <tbody>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <img src="images/nlac.png" width=160></img>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2505.18098">
+                    <papertitle>Natural Language Actor-Critic: Scalable Off-Policy Learning in Language Space
+
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="https://scholar.google.com/citations?user=YIlYQ6oAAAAJ&hl=zh-CN">Kang Liu</a>
+                  <a href="https://lz1oceani.github.io/">Zhan Ling</a>
+                  <a href="https://jiecchen.github.io/">Jiecao Chen</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <br>
+                  <em>under submission</em>, 2025
+                  <br>
+                  <a href="https://arxiv.org/abs/2512.04601">arXiv</a>
+                  <a href="https://github.com/jxihong/nlac">code</a>
+                  <a href="https://jxihong.github.io/nlac_website">website</a>
+                </td>
+              </tr>
+             <tr>
+              <tr>
+                <td style="padding:20px;width:25%;vertical-align:middle">
+                  <div class="one">
+                    <div class="two">
+                      <video src="images/pnlc_video.mp4" width=160 autoplay loop muted playsinline></video>
+                    </div>
+                  </div>
+                </td>
+                <td style="padding:20px;width:75%;vertical-align:middle">
+                  <a href="https://arxiv.org/abs/2505.18098">
+                    <papertitle>Planning without Search: Refining Frontier LLMs with Offline Goal-Conditioned RL
+                    </papertitle>
+                  </a>
+                  <br>
+                  <strong>Joey Hong</strong>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <br>
+                  <em>NeurIPS</em>, 2025
+                  <br>
+                  <a href="https://arxiv.org/abs/2505.18098">arXiv</a>
+                  <a href="https://jxihong.github.io/pnlc_website">website</a>
+                </td>
+              </tr>
+             <tr>
              <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
@@ -121,12 +175,11 @@
                   <a href="https://arxiv.org/abs/2310.20663">arXiv</a>
                 </td>
               </tr>
-
               <tr>
                 <td style="padding:20px;width:25%;vertical-align:middle">
                   <div class="one">
                     <div class="two">
-                      <img src="images/overcooked_influence.png" width=160></img>
+                      <video src="images/overcooked_influence_video.mp4" width=160 autoplay loop muted playsinline></video>
                     </div>
                   </div>
                 </td>
