--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="https://scholar.google.com/citations?user=YIlYQ6oAAAAJ&hl=zh-CN">Kang Liu</a>
-                  <a href="https://lz1oceani.github.io/">Zhan Ling</a>
-                  <a href="https://jiecchen.github.io/">Jiecao Chen</a>
-                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <a href="https://scholar.google.com/citations?user=YIlYQ6oAAAAJ&hl=zh-CN">Kang Liu</a>,
+                  <a href="https://lz1oceani.github.io/">Zhan Ling</a>,
+                  <a href="https://jiecchen.github.io/">Jiecao Chen</a>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
                   <br>
                   <em>under submission</em>, 2025
                   <br>
@@ -98,8 +98,8 @@
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
-                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
                   <br>
                   <em>NeurIPS</em>, 2025
                   <br>
@@ -122,8 +122,8 @@
                   </a>
                   <br>
                   <strong>Joey Hong</strong>,
-                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>
-                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
+                  <a href="http://people.eecs.berkeley.edu/~anca/">Anca Dragan</a>,
+                  <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>
                   <br>
                   <em>ICLR</em>, 2025
                   <br>
